--- a/index.html
+++ b/index.html
@@ -1926,7 +1926,7 @@
           getRef("page_container"),
           html`
             <div class="grid gap-1">
-              <h2>Don't have an Binance address? Create one</h2>
+              <h2>Don't have a Binance address? Create one</h2>
               <section class="create-buttons">
                 <button
                   class="button button--primary interactive gap-0-5 margin-right-auto"
