--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p id="confirm_message" class="breakable"></p>
       <div class="flex align-center gap-0-5 margin-left-auto">
         <button class="button cancel-button">Cancel</button>
-        <button class="button button--primary confirm-button">OK</button>
+        <button class="button button--primary confirm-button ok-button">Ok</button>
       </div>
     </sm-popup>
     <main>
