--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <script src="scripts/floEthereum.js" type="text/javascript"></script>
     <script src="scripts/compactIDB.js" type="text/javascript"></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/ethers@5.6/dist/ethers.umd.min.js"
+      src="scripts/ether.umd.min.js"
       type="text/javascript"
     ></script>
     <script src="scripts/bscOperator.js" type="text/javascript"></script>
