feat : added transaction history ,transaction details and currency selector

--- a/index.html
+++ b/index.html
@@ -2853,6 +2853,7 @@
 
  
       function togglePrivateKeyVisibility(input) {
+        console.log(input)
   const target = input.closest("sm-input");
   // const checkBalanceButton = document.querySelector("#check_balance_button");
         console.log(target)
@@ -2976,6 +2977,7 @@
           });
       }
       function handleSenderInput(e) {
+        console.log(e.target.isValid)
         getRef("check_balance_button").disabled = false;
         if (!e.target.isValid) {
           // getRef("sender_balance_container").classList.add("hidden");
